Update controller to simple version